# esp8266_aiot

./: CMakeLists.txt  Makefile  path.sh  sdkconfig  sdkconfig.old
componenst/: CMakeLists.txt  component.mk
componenst/LinkSDK/: ChangeLog.md
componenst/LinkSDK/core/sysdep/: core_adapter.c
components/: CMakeLists.txt  component.mk
components/app_data_model/: app_data_model.c  app_data_model.h
components/app_dynreg_mqtt/: app_dynreg_mq.c  app_dynreg_mq.h
components/app_flash/: app_flash.c  app_flash.h
components/app_ntp/: app_ntp.c  app_ntp.h
components/app_ota/: app_ota.c  app_ota.h
components/app_version/: app_version.c  app_version.h
main/: CMakeLists.txt  main.c
